# ysyx_for_SsealessLand

./: .gitignore  Makefile
abstract-machine/: Makefile  flake.nix
abstract-machine/am/include/arch/: riscv.h
abstract-machine/am/src/native/: ioe.c
abstract-machine/am/src/platform/nemu/ioe/: input.c  ioe.c  timer.c
abstract-machine/am/src/riscv/: riscv.h
abstract-machine/am/src/riscv/nemu/: cte.c  trap.S
abstract-machine/am/src/riscv/npc/: trm.c
abstract-machine/am/src/riscv/soc/: timer.c
abstract-machine/klib/include/: fcntl.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
abstract-machine/klib/include/sys/: stat.h  types.h
abstract-machine/klib/src/: stdio.c  stdlib.c  string.c
abstract-machine/scripts/: linker.ld  riscv32-nemu.mk
abstract-machine/scripts/isa/: riscv.mk
abstract-machine/scripts/platform/: npc.mk
nemu/: Kconfig  Makefile
nemu/include/: isa.h  macro.h
nemu/include/memory/: host.h
nemu/src/cpu/: cpu-exec.c
nemu/src/cpu/difftest/: ref.c
nemu/src/device/: vga.c
nemu/src/device/io/: mmio.c
nemu/src/isa/riscv32/: init.c  inst.c  reg.c
nemu/src/isa/riscv32/difftest/: dut.c
nemu/src/isa/riscv32/include/: isa-def.h
nemu/src/isa/riscv32/local-include/: reg.h
nemu/src/isa/riscv32/system/: intr.c
nemu/src/memory/: paddr.c
nemu/src/monitor/sdb/: expr.c  sdb.c  watchpoint.c
nemu/src/utils/: filelist.mk
nemu/tools/capstone/: Makefile
npc/: .gitignore  Makefile  README.md  build.mill  flake.nix  overlay.nix
npc/Sim/: CMakeLists.txt  Makefile  SoC-exe.cpp  core-exe.cpp  device.cpp  difftest.cpp  disasm.cpp  ebreak.cpp  exe.cpp  flake.nix  main.cpp  mem.cpp  parser.cpp  reg.cpp  sdb.cpp  states.cpp  test.c
npc/Sim/SoC_model/: VysyxSoCFull.cpp  VysyxSoCFull.h  VysyxSoCFull.mk  VysyxSoCFull__ConstPool_0.cpp  VysyxSoCFull__Dpi.h  VysyxSoCFull__Syms.cpp  VysyxSoCFull__Syms.h  VysyxSoCFull__Trace__0.cpp  VysyxSoCFull__Trace__0__Slow.cpp  VysyxSoCFull___024root.h  VysyxSoCFull___024root__DepSet_h0188974b__0.cpp  VysyxSoCFull___024root__DepSet_h0188974b__0__Slow.cpp  VysyxSoCFull___024root__DepSet_h0188974b__1.cpp  VysyxSoCFull___024root__DepSet_h4d156741__0.cpp  VysyxSoCFull___024root__DepSet_h4d156741__0__Slow.cpp  VysyxSoCFull___024root__Slow.cpp  VysyxSoCFull___024unit.h  VysyxSoCFull_classes.mk  Vysyx_23060321.cpp  Vysyx_23060321.h  Vysyx_23060321.mk  Vysyx_23060321__Dpi.cpp  Vysyx_23060321__Dpi.h  Vysyx_23060321__Syms.cpp  Vysyx_23060321__Syms.h  Vysyx_23060321__TraceDecls__0__Slow.cpp  Vysyx_23060321__Trace__0.cpp  Vysyx_23060321__Trace__0__Slow.cpp  Vysyx_23060321___024root.h  Vysyx_23060321___024root__DepSet_h439e5d62__0.cpp  Vysyx_23060321___024root__DepSet_h439e5d62__0__Slow.cpp  Vysyx_23060321___024root__DepSet_hdff0ce6b__0.cpp  Vysyx_23060321___024root__Slow.cpp  Vysyx_23060321___024unit.h  Vysyx_23060321___024unit__DepSet_h749df728__0.cpp  Vysyx_23060321___024unit__DepSet_hea436621__0__Slow.cpp  Vysyx_23060321___024unit__Slow.cpp  Vysyx_23060321__pch.h  Vysyx_23060321_classes.mk
npc/Sim/device /: mmio.cpp
npc/Sim/include/: SoC-exe.h  core-exe.h  device.h  difftest.h  disasm.h  ebreak.h  exe.h  mem.h  mmio.h  parser.h  reg.h  sdb.h  state.h  states.h
npc/Sim/v_include/: verilated.mk  verilated_config.h
npc/Sim/v_model/: Vcore.cpp  Vcore.h  Vcore.mk  Vcore__ALL.cpp  Vcore__ConstPool_0.cpp  Vcore__Dpi.h  Vcore__Syms.cpp  Vcore__Syms.h  Vcore__Trace__0.cpp  Vcore__Trace__0__Slow.cpp  Vcore___024root.h  Vcore___024root__DepSet_h0a3cae5e__0.cpp  Vcore___024root__DepSet_h0a3cae5e__0__Slow.cpp  Vcore___024root__DepSet_h134b5715__0.cpp  Vcore___024root__DepSet_h134b5715__0__Slow.cpp  Vcore_classes.mk
npc/Sim/verilator_model/: VCPU.cpp  VCPU.h  VCPU.mk  VCPU__ALL.cpp  VCPU__Dpi.h  VCPU__Syms.cpp  VCPU__TraceDecls__0__Slow.cpp  VCPU__Trace__0.cpp  VCPU__Trace__0__Slow.cpp  VCPU___024root.h  VCPU___024root__DepSet_h295dba0a__0.cpp  VCPU___024root__DepSet_h295dba0a__0__Slow.cpp  VCPU___024root__DepSet_h6c062b6c__0.cpp  VCPU___024root__DepSet_h6c062b6c__0__Slow.cpp  VCPU_classes.mk
npc/playground/src/: Elaborate.scala
npc/playground/src/dxy/: Control.scala  InstFetch.scala  RegFile.scala  core.scala  decoder.scala  ebreak.scala  executer.scala  fetch.scala  fetch_mem_access.scala  mem.scala  ram.scala  regfile.scala  test.scala  top.scala
npc/playground/src/gyr/: ALU.scala  Arbiter.scala  DPI-C.scala  Decode.scala  Execute.scala  Fetch.scala  LoadSave.scala  Regfile.scala  WriteBack.scala  connect.scala  core.scala  csr.scala  ebreak.scala  ecall.scala  len.scala  observer.scala  sram.scala  tool.scala
npc/playground/src/te/: decode.scala
npc/playground/src/xininn/: ALU.scala  CSR.scala  EXU.scala  IDU.scala  IFU.scala  LSU.scala  RF.scala  SoC.scala  WBU.scala  Xbar.scala  csr.scala  params.scala  test.scala  traphandler.scala
npc/playground/src/xininn/bundlelist/: AXI.scala  AXI4lite.scala  buscon.scala
npc/playground/src/xininn/utils/: break.scala  commitbuffer.scala  flushableQueue.scala  instcnt.scala  pcmonitor.scala  sram.scala
npc/src/main/: Elaborate.scala  GCD.scala
npc/src/main/SLLpc/: ALU.scala  Decoder.scala  Execute.scala  Mem.scala  Regfile.scala  top.scala
npc/src/test/: TST.scala
